force-app/main/default/objects/NC_Bounty__c/NC_Bounty__c.object-meta.xml
<CustomObject>
    <label>Bounty</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Bounty Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bounties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>