force-app/main/default/objects/NC_Bounty__c/fields/B_End_Date__c.field-meta.xml
<CustomField>
    <fullName>B_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>