force-app/main/default/objects/NC_Bounty__c/fields/B_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>B_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>