force-app/main/default/objects/NC_Bounty__c/fields/Measure_Unit__c.field-meta.xml
<CustomField>
    <fullName>Measure_Unit__c</fullName>
    <label>Measure Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Fixed quantity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>