force-app/main/default/objects/NC_Bounty__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <referenceTo>NC_Unit__c</referenceTo>
    <relationshipLabel>Bounties</relationshipLabel>
    <relationshipName>Bounties</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>