force-app/main/default/objects/NC_Bounty__c/validationRules/OlderThanStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>OlderThanStartDate</fullName>
    <active>true</active>
    <errorConditionFormula>B_Start_Date__c  &gt; B_End_Date__c</errorConditionFormula>
    <errorDisplayField>B_End_Date__c</errorDisplayField>
    <errorMessage>The End Date must be after the Start Date</errorMessage>
</ValidationRule>